--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-query": "^3.24.4",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "serve": "^12.0.1"
   },
   "scripts": {
     "start": "craco start",
